--- a/index.rmd
+++ b/index.rmd
@@ -77,6 +77,20 @@ Figure 1: Example fold changes for markers of early immune response
 
 ---
 
+## Question: What is the average fold change cutoff used?
+
+### Approach
+>- Sampled 10 papers for which FC filtering was used.
+
+### Result
+>- Papers used a cutoff of either 1.5 or 2.0. ($\mu = 1.725$)
+>- Authors also suggest, however, that based on MAQC study results, microarrays
+   tend to underestimate the actual FC compared with qRTPCR (Canales et al. 
+   2006).
+>- Adjusted microarray cutoff likely closer to 3.45.
+
+---
+
 ## Question: Which statistical methods work best for detecting low FC genes?
 
 ### Approach
@@ -115,10 +129,20 @@ the 23 inflammation-related GO categories.
 >3. <span class='red'>Conclusion</span>: Existing methods are sufficient to
     detect biologically meaningful enrichment at low FC.
 
----
+--- .references
 
 ## References
 
+```{r refs, include=FALSE}
+library(knitcitations)
+cleanbib()
+citep('10.1016/j.ymeth.2013.03.027')
+citep('10.1038/nbt1236')
+```
+
+```{r refs_output, echo=FALSE, results='asis'}
+bibliography('html')
+```
 
 <!-- Custom JavaScript -->
 <script src="http://ajax.aspnetcdn.com/ajax/jQuery/jquery-1.7.min.js"></script>
